--- a/HW6/Problem1Python.ipynb
+++ b/HW6/Problem1Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Problem1Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPo2wqfgNBvjBhxomJOATEs",
+      "authorship_tag": "ABX9TyP89vREb+v1lwa2/3oxNHBs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1311,7 +1311,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Taking max_depth=2 and max_leaf_nodes=3\n",
+        "# For CART and C5 tree taking max_depth=2 and max_leaf_nodes=3\n",
         "cart_classifier1 = makeDTModel(\"gini\", X_train, y_train,2,4)\n",
         "c5_classifier1 = makeDTModel(\"entropy\", X_train, y_train,2,4)"
       ],
@@ -1333,7 +1333,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display tree for cart_classifier1\n",
+        "# DisplayTree for cart_classifier1\n",
         "plt.figure(figsize=(10, 8), dpi=80)\n",
         "plt.subplot(1,2,1)\n",
         "displayTree(cart_classifier1, X)\n",
@@ -1367,7 +1367,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display tree for c5_classifier1\n",
+        "# DisplayTree for c5_classifier1\n",
         "plt.figure(figsize=(10, 8), dpi=80)\n",
         "plt.subplot(1,2,2)\n",
         "displayTree(c5_classifier1, X)\n",
@@ -1401,7 +1401,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display CM for cart_classifier1\n",
+        "# DisplayCM for cart_classifier1\n",
         "plt.figure(figsize=(12, 8), dpi=80)\n",
         "print('Confusion matrix of cart_classifier1')\n",
         "plt.subplot(1,2,1)\n",
@@ -1454,7 +1454,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display CM for c5_classifier1\n",
+        "# DisplayCM for c5_classifier1\n",
         "plt.figure(figsize=(12, 8), dpi=80)\n",
         "print('Confusion matrix of c5_classifier1')\n",
         "plt.subplot(1,2,2)\n",
@@ -1507,7 +1507,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Accuracy Scores and plots for side-by-side model comparisons of cart_classifier1 and c5_classifier1\n",
+        "# Accuracy Scores and plot for side-by-side model comparisons of cart_classifier1 and c5_classifier1\n",
         "compareModels(cart_classifier1, c5_classifier1)"
       ],
       "metadata": {
@@ -1563,7 +1563,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Taking max_depth=3 and max_leaf_nodes=4\n",
+        "#For CART and C5 tree taking max_depth=3 and max_leaf_nodes=5\n",
         "cart_classifier2 = makeDTModel(\"gini\", X_train, y_train,3,5)\n",
         "c5_classifier2 = makeDTModel(\"entropy\", X_train, y_train,3,5)"
       ],
@@ -1576,7 +1576,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display tree for cart_classifier2\n",
+        "# DisplayTree for cart_classifier2\n",
         "plt.figure(figsize=(15, 8), dpi=80)\n",
         "plt.subplot(1,2,1)\n",
         "displayTree(cart_classifier2, X)\n",
@@ -1610,7 +1610,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display tree for c5_classifier2\n",
+        "# DisplayTree for c5_classifier2\n",
         "plt.figure(figsize=(15, 8), dpi=80)\n",
         "plt.subplot(1,2,2)\n",
         "displayTree(c5_classifier2, X)\n",
@@ -1644,7 +1644,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display CM for cart_classifier2\n",
+        "# DisplayCM for cart_classifier2\n",
         "plt.figure(figsize=(12, 8), dpi=80)\n",
         "print('Confusion matrix for cart_classifier2')\n",
         "plt.subplot(1,2,1)\n",
@@ -1697,7 +1697,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display CM for c5_classifier2\n",
+        "# DisplayCM for c5_classifier2\n",
         "plt.figure(figsize=(12, 8), dpi=80)\n",
         "print('Confusion matrix for c5_classifier2')\n",
         "plt.subplot(1,2,2)\n",
@@ -1750,7 +1750,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Accuracy Scores and plots for side-by-side model comparisons of cart_classifier2 and c5_classifier2\n",
+        "# Accuracy Scores and plot for side-by-side model comparisons of cart_classifier2 and c5_classifier2\n",
         "compareModels(cart_classifier2, c5_classifier2)"
       ],
       "metadata": {
@@ -1806,7 +1806,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Taking max_depth=4 and max_leaf_nodes=5\n",
+        "#For CART and C5 tree taking max_depth=4 and max_leaf_nodes=6\n",
         "cart_classifier3 = makeDTModel(\"gini\", X_train, y_train,4,6)\n",
         "c5_classifier3 = makeDTModel(\"entropy\", X_train, y_train,4,6)"
       ],
@@ -1819,7 +1819,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display tree for cart_classifier3\n",
+        "# DisplayTree for cart_classifier3\n",
         "plt.figure(figsize=(15, 8), dpi=80)\n",
         "plt.subplot(1,2,1)\n",
         "displayTree(cart_classifier3, X)\n",
@@ -1853,7 +1853,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display tree for c5_classifier3\n",
+        "# DisplayTree for c5_classifier3\n",
         "plt.figure(figsize=(15, 8), dpi=80)\n",
         "plt.subplot(1,2,2)\n",
         "displayTree(c5_classifier3, X)\n",
@@ -1887,7 +1887,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display CM for cart_classifier3\n",
+        "# DisplayCM for cart_classifier3\n",
         "plt.figure(figsize=(12, 8), dpi=80)\n",
         "print('Confusion matrix for cart_classifier3')\n",
         "plt.subplot(1,2,1)\n",
@@ -1940,7 +1940,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display CM for c5_classifier3\n",
+        "# DisplayCM for c5_classifier3\n",
         "plt.figure(figsize=(12, 8), dpi=80)\n",
         "print('Confusion matrix for c5_classifier3')\n",
         "plt.subplot(1,2,2)\n",
@@ -1993,7 +1993,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Accuracy Scores and plots for side-by-side model comparisons of cart_classifier3 and c5_classifier3\n",
+        "# Accuracy Scores and plot for side-by-side model comparisons of cart_classifier3 and c5_classifier3\n",
         "compareModels(cart_classifier3, c5_classifier3)"
       ],
       "metadata": {
@@ -2049,7 +2049,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Taking max_depth=None and max_leaf_nodes=None\n",
+        "#For CART and C5 tree taking max_depth=None and max_leaf_nodes=None\n",
         "cart_classifier4 = makeDTModel(\"gini\", X_train, y_train)\n",
         "c5_classifier4 = makeDTModel(\"entropy\", X_train, y_train)"
       ],
@@ -2062,7 +2062,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display tree for c5_classifier4\n",
+        "# DisplayTree for c5_classifier4\n",
         "plt.figure(figsize=(15, 8), dpi=80)\n",
         "plt.subplot(1,2,2)\n",
         "displayTree(c5_classifier4, X)\n",
@@ -2096,7 +2096,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display tree for cart_classifier4\n",
+        "# DisplayTree for cart_classifier4\n",
         "plt.figure(figsize=(15, 8), dpi=80)\n",
         "plt.subplot(1,2,1)\n",
         "displayTree(cart_classifier4, X)\n",
@@ -2130,7 +2130,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display CM for c5_classifier4\n",
+        "# DisplayCM for c5_classifier4\n",
         "plt.figure(figsize=(12, 8), dpi=80)\n",
         "print('Confusion matrix for cart_classifier4')\n",
         "plt.subplot(1,2,2)\n",
@@ -2183,7 +2183,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display CM for cart_classifier4\n",
+        "# DisplayCM for cart_classifier4\n",
         "plt.figure(figsize=(12, 8), dpi=80)\n",
         "print('Confusion matrix for c5_classifier3')\n",
         "plt.subplot(1,2,1)\n",
@@ -2236,7 +2236,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Accuracy Scores and plots for side-by-side model comparisons of cart_classifier4 and c5_classifier4\n",
+        "# Accuracy Scores and plot for side-by-side model comparisons of cart_classifier4 and c5_classifier4\n",
         "compareModels(cart_classifier4, c5_classifier4)"
       ],
       "metadata": {
