--- a/HW6/Problem1Python.ipynb
+++ b/HW6/Problem1Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Problem1Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP89vREb+v1lwa2/3oxNHBs",
+      "authorship_tag": "ABX9TyOD6ajcmmbLlKQWrijTyItf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1263,14 +1263,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# create and display plots of side-by-side model comparisons\n",
+        "# create and display plot of side-by-side model comparisons\n",
         "def compareModels(cart_classifier, c5_classifier):\n",
         "  labels = ['CART', 'C5.0']\n",
-        "  # Record CART's classification accuracy on tarining and test datasets\n",
+        "\n",
+        "  # Record CART's classification accuracy on training and testing datasets\n",
         "  cart_train_score1 = round(cart_classifier.score(X_train, y_train), 2) # training score\n",
         "  cart_test_score1 = round(cart_classifier.score(X_test, y_test), 2)   # testing score\n",
         "  print (\"CART Training and Testing scores: %.2f, %.2f\" %  (cart_train_score1, cart_test_score1))\n",
-        "  # Record C5's classification accuracy on tarining and test datasets\n",
+        "  \n",
+        "  # Record C5's classification accuracy on training and testing datasets\n",
         "  c5_train_score1 = round(c5_classifier1.score(X_train, y_train), 2) # training score\n",
         "  c5_test_score1 = round(c5_classifier1.score(X_test, y_test), 2)   # testing score\n",
         "  print (\"C5.0 Training and Testing scores: %.2f, %.2f\" %  (c5_train_score1, c5_test_score1))\n",
@@ -1309,6 +1311,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**DisplayTree, DisplayCM and classification accuracy for cart_classifier1 and c5_classifier1**"
+      ],
+      "metadata": {
+        "id": "Mgim10okFHsP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# For CART and C5 tree taking max_depth=2 and max_leaf_nodes=3\n",
@@ -1320,15 +1331,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**DisplayTree, DisplayCM and classification accuracy for cart_classifier1 and c5_classifier1**"
-      ],
-      "metadata": {
-        "id": "Mgim10okFHsP"
-      }
     },
     {
       "cell_type": "code",
