--- a/HW6/Problem1Python.ipynb
+++ b/HW6/Problem1Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Problem1Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOD6ajcmmbLlKQWrijTyItf",
+      "authorship_tag": "ABX9TyPvY+fUxAA4AD4RhQCALRm6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1263,16 +1263,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# create and display plot of side-by-side model comparisons\n",
+        "# create and display plots of side-by-side model comparisons\n",
         "def compareModels(cart_classifier, c5_classifier):\n",
         "  labels = ['CART', 'C5.0']\n",
-        "\n",
-        "  # Record CART's classification accuracy on training and testing datasets\n",
+        "  # Record CART's classification accuracy on tarining and test datasets\n",
         "  cart_train_score1 = round(cart_classifier.score(X_train, y_train), 2) # training score\n",
         "  cart_test_score1 = round(cart_classifier.score(X_test, y_test), 2)   # testing score\n",
         "  print (\"CART Training and Testing scores: %.2f, %.2f\" %  (cart_train_score1, cart_test_score1))\n",
-        "  \n",
-        "  # Record C5's classification accuracy on training and testing datasets\n",
+        "  # Record C5's classification accuracy on tarining and test datasets\n",
         "  c5_train_score1 = round(c5_classifier1.score(X_train, y_train), 2) # training score\n",
         "  c5_test_score1 = round(c5_classifier1.score(X_test, y_test), 2)   # testing score\n",
         "  print (\"C5.0 Training and Testing scores: %.2f, %.2f\" %  (c5_train_score1, c5_test_score1))\n",
@@ -1311,15 +1309,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "**DisplayTree, DisplayCM and classification accuracy for cart_classifier1 and c5_classifier1**"
-      ],
-      "metadata": {
-        "id": "Mgim10okFHsP"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# For CART and C5 tree taking max_depth=2 and max_leaf_nodes=3\n",
@@ -1331,6 +1320,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**DisplayTree, DisplayCM and classification accuracy for cart_classifier1 and c5_classifier1**"
+      ],
+      "metadata": {
+        "id": "Mgim10okFHsP"
+      }
     },
     {
       "cell_type": "code",
@@ -1509,7 +1507,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Accuracy Scores and plot for side-by-side model comparisons of cart_classifier1 and c5_classifier1\n",
+        "# Accuracy Scores and plots for side-by-side model comparisons of cart_classifier1 and c5_classifier1\n",
         "compareModels(cart_classifier1, c5_classifier1)"
       ],
       "metadata": {
@@ -1752,7 +1750,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Accuracy Scores and plot for side-by-side model comparisons of cart_classifier2 and c5_classifier2\n",
+        "# Accuracy Scores and plots for side-by-side model comparisons of cart_classifier2 and c5_classifier2\n",
         "compareModels(cart_classifier2, c5_classifier2)"
       ],
       "metadata": {
@@ -1995,7 +1993,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Accuracy Scores and plot for side-by-side model comparisons of cart_classifier3 and c5_classifier3\n",
+        "# Accuracy Scores and plots for side-by-side model comparisons of cart_classifier3 and c5_classifier3\n",
         "compareModels(cart_classifier3, c5_classifier3)"
       ],
       "metadata": {
@@ -2238,7 +2236,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Accuracy Scores and plot for side-by-side model comparisons of cart_classifier4 and c5_classifier4\n",
+        "# Accuracy Scores and plots for side-by-side model comparisons of cart_classifier4 and c5_classifier4\n",
         "compareModels(cart_classifier4, c5_classifier4)"
       ],
       "metadata": {
