--- a/HW6/Problem2R.ipynb
+++ b/HW6/Problem2R.ipynb
@@ -6,7 +6,7 @@
       "name": "Problem2R.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNwnT+rKvY4HfAPu6RiCoKQ",
+      "authorship_tag": "ABX9TyPznLrIn50DrRBdYqJ9iXXs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "metadata": {
         "id": "coREPFawb6wf",
         "colab": {
@@ -92,7 +92,7 @@
         "id": "T01lRSzsciFM",
         "outputId": "18678d2c-d03e-4911-a06e-946d588b62d4"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "id": "I9atbjLeaB4w",
         "outputId": "af0253c4-3ba9-4d46-fcb4-26149a4af81c"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +168,7 @@
         "id": "5OvZyjvKZNtK",
         "outputId": "94c96787-7b2b-404c-b25a-99cb20a48f6f"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
         "id": "8l15K7uZaQd1",
         "outputId": "c9497e8d-87ab-48b3-acf5-660706c9d2a4"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,7 +234,7 @@
         "id": "WgUkBja-ki9z",
         "outputId": "cf3d4371-0010-4c6d-88e3-4b3581b4e0da"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +272,7 @@
         "id": "9rNzG27ck0Dl",
         "outputId": "d0e84885-d245-4c21-8558-9a14e46ccf9f"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +299,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "str() of Loans_TrainingDF and Loans_TestDF to display the internal structure of Train and Test data"
+        "**str() of Loans_TrainingDF and Loans_TestDF to display the internal structure of Train and Test data**"
       ],
       "metadata": {
         "id": "F3WFlCQZbpnT"
@@ -319,7 +319,7 @@
         "id": "iRXjPzchbb8B",
         "outputId": "b090e709-dd8a-4e1b-9594-f0826db7d636"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,7 +358,7 @@
         "id": "_Wmy8tttbXFY",
         "outputId": "a984d890-49ef-4216-a138-471b24974e55"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +408,7 @@
         "id": "CME_DT3idWM5",
         "outputId": "04d6a5a1-9b46-4768-81af-ffcf090afb29"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,7 +433,7 @@
         "id": "rD4mGz-fdlCT",
         "outputId": "a202e5c1-0e20-4145-e1bd-921b831f59b8"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +456,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The prop. table() function in R can be used to calculate the value of each cell in a table as a proportion of all values."
+        "**The prop. table() function in R can be used to calculate the value of each cell in a table as a proportion of all values.**"
       ],
       "metadata": {
         "id": "ugvVD7NdgBav"
@@ -476,7 +476,7 @@
         "id": "nJQBKmgVeLaA",
         "outputId": "437adb11-dd96-49b4-d7de-350d1699156a"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,7 +503,7 @@
         "id": "JvioITV3fkwE",
         "outputId": "fbe31ad1-3644-4dcd-b80f-66dd54804717"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +547,7 @@
         "id": "QATMw0BfWtdK",
         "outputId": "4c5a8b2d-f3c1-4f06-d9c1-84b99e249141"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,13 +854,13 @@
       "metadata": {
         "id": "LCvNu3gGjMAV"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Create a CART model using the training data set that predicts Approval using Debt-to-Income Ratio, FICO Score, etc. Visualize the decision tree and Describe the first few splits in the decision tree."
+        "**Create a CART model using the training data set that predicts Approval using Debt-to-Income Ratio, FICO Score, etc. Visualize the decision tree and Describe the first few splits in the decision tree.**"
       ],
       "metadata": {
         "id": "p1HwdETEkDkz"
@@ -882,7 +882,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -930,7 +930,7 @@
           "height": 497
         }
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -961,7 +961,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Prediction of CART model and Loans_TestDF"
+        "**Prediction of CART model and Loans_TestDF**"
       ],
       "metadata": {
         "id": "l4fMXOFUu5nd"
@@ -982,7 +982,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -998,7 +998,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Confusion Matrix of Loans_TestDF and predict_CART.\n",
+        "**Confusion Matrix of Loans_TestDF and predict_CART.**\n",
         "\n",
         "\n",
         "> A summary of prediction results on a classification problem. The number of correct and incorrect predictions are summarized with count values and broken down by each class. \n",
@@ -1022,7 +1022,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1062,7 +1062,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Accuracy of CART model"
+        "**Accuracy of CART model**"
       ],
       "metadata": {
         "id": "6G4zgaCggiDe"
@@ -1084,7 +1084,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1110,7 +1110,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1125,7 +1125,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Build a C5.0 model using the same predictors and target as in part 1.  This time, specify a minimum of 1000 cases per terminal node. Visualize the decision tree. Describe the first few splits in the decision tree."
+        "**Build a C5.0 model using the same predictors and target as in part 1.  This time, specify a minimum of 1000 cases per terminal node. Visualize the decision tree. Describe the first few splits in the decision tree.**"
       ],
       "metadata": {
         "id": "gxY2F1QwzHsZ"
@@ -1146,7 +1146,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1184,7 +1184,7 @@
           "height": 497
         }
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1198,7 +1198,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Prediction of c5 model and Loans_TestDF"
+        "**Prediction of c5 model and Loans_TestDF**"
       ],
       "metadata": {
         "id": "33Bhn8ZrlvKZ"
@@ -1219,7 +1219,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1234,7 +1234,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Confusion Matrix of Loans_TestDF and predict_c5"
+        "**Confusion Matrix of Loans_TestDF and predict_c5**"
       ],
       "metadata": {
         "id": "L-rCpBNemPug"
@@ -1254,7 +1254,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1294,7 +1294,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Accuracy of c5 model"
+        "**Accuracy of c5 model**"
       ],
       "metadata": {
         "id": "KBNl6Sc4mibq"
@@ -1316,7 +1316,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1331,7 +1331,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "How does your C5.0 model compare to your CART model for the loans_training data? Describe the similarities and differences."
+        "**How does your C5.0 model compare to your CART model for the loans_training data? Describe the similarities and differences.**"
       ],
       "metadata": {
         "id": "OM8T1JIImtxs"
@@ -1348,7 +1348,7 @@
       "metadata": {
         "id": "PuSyKQwszMqq"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1366,7 +1366,7 @@
           "height": 497
         }
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
