--- a/HW7/Problem1_Python.ipynb
+++ b/HW7/Problem1_Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Problem1_Python",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNXfn/v4EkEYzjW2M/JFscK",
+      "authorship_tag": "ABX9TyMMNEl9A9FKLa98nag6d2pL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2434,11 +2434,11 @@
         "relevant_dermetologyDF"
       ],
       "metadata": {
-        "id": "V9STuXSPPUS9",
-        "outputId": "5ed13b28-4e5e-4a66-e36a-43f2b30797b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V9STuXSPPUS9",
+        "outputId": "5ed13b28-4e5e-4a66-e36a-43f2b30797b0"
       },
       "execution_count": 396,
       "outputs": [
@@ -3157,7 +3157,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#3-fold cross-validation of linear regression model"
+        "**3-fold cross-validation of linear regression model**"
       ],
       "metadata": {
         "id": "6E9vdlijMckm"
@@ -3172,11 +3172,11 @@
         "print(\"3-fold cross-validation of LRmodel: \",cross_validation_LR.mean())"
       ],
       "metadata": {
-        "id": "ji3xdHl1MZR9",
-        "outputId": "a42c2d90-6a01-4018-9947-db24637ce620",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ji3xdHl1MZR9",
+        "outputId": "a42c2d90-6a01-4018-9947-db24637ce620"
       },
       "execution_count": 402,
       "outputs": [
@@ -3413,10 +3413,10 @@
       ],
       "metadata": {
         "id": "YcaFt1Ji9aSh",
-        "outputId": "19c1af97-1d99-4bfc-9b66-098f94888634",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "19c1af97-1d99-4bfc-9b66-098f94888634"
       },
       "execution_count": 408,
       "outputs": [
@@ -3497,12 +3497,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "JDXjuYS2ZeB5",
-        "outputId": "132bc6e9-24a6-4da6-fd96-154c4d240583",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "id": "JDXjuYS2ZeB5",
+        "outputId": "132bc6e9-24a6-4da6-fd96-154c4d240583"
       },
       "execution_count": 410,
       "outputs": [
@@ -3536,11 +3536,11 @@
         "print(\"Accuracy Score of gini:\",accuracy_score(Y, y_pred_CART))"
       ],
       "metadata": {
-        "id": "bqI2TTcExYVl",
-        "outputId": "d5a1fb6f-2644-4ba3-d5e8-53a5203a63f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bqI2TTcExYVl",
+        "outputId": "d5a1fb6f-2644-4ba3-d5e8-53a5203a63f9"
       },
       "execution_count": 411,
       "outputs": [
@@ -3573,12 +3573,12 @@
         "tree.plot_tree(C5_model, feature_names=X.keys(), filled=True);"
       ],
       "metadata": {
-        "id": "WguBQOqNypRe",
-        "outputId": "242755f9-7d7f-46da-dc05-61e9eb92e763",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 657
-        }
+        },
+        "id": "WguBQOqNypRe",
+        "outputId": "242755f9-7d7f-46da-dc05-61e9eb92e763"
       },
       "execution_count": 412,
       "outputs": [
@@ -3618,12 +3618,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "FGxpk-hyzIFF",
-        "outputId": "9915ecbe-d5fb-45f9-874c-d07d3ed8db06",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "id": "FGxpk-hyzIFF",
+        "outputId": "9915ecbe-d5fb-45f9-874c-d07d3ed8db06"
       },
       "execution_count": 413,
       "outputs": [
@@ -3657,11 +3657,11 @@
         "print(\"Accuracy Score of entropy:\",accuracy_score(Y, y_pred_C5))"
       ],
       "metadata": {
-        "id": "mFNuquHCzbMw",
-        "outputId": "82d36158-a4e3-4da8-99f8-dc1312fd2fcc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mFNuquHCzbMw",
+        "outputId": "82d36158-a4e3-4da8-99f8-dc1312fd2fcc"
       },
       "execution_count": 414,
       "outputs": [
@@ -3703,11 +3703,11 @@
         "print(\"3-fold cross-validtaion of Entropy: \",cross_validation_C5.mean())"
       ],
       "metadata": {
-        "id": "XLLA7DTY0AYK",
-        "outputId": "f847a004-594f-4559-f5ac-74c6459f2491",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XLLA7DTY0AYK",
+        "outputId": "f847a004-594f-4559-f5ac-74c6459f2491"
       },
       "execution_count": 425,
       "outputs": [
@@ -3751,10 +3751,10 @@
       ],
       "metadata": {
         "id": "3Ztn045ZgFUT",
-        "outputId": "72154541-cff1-48a2-de82-f15d55e9a51f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "72154541-cff1-48a2-de82-f15d55e9a51f"
       },
       "execution_count": 416,
       "outputs": [
@@ -3791,12 +3791,12 @@
         "tree.plot_tree(Random_forest.estimators_[0], feature_names=X.keys(), filled=True);"
       ],
       "metadata": {
-        "id": "QC2yqbtE1S2h",
-        "outputId": "51a2c353-021f-42ef-aec6-6fc446510815",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 657
-        }
+        },
+        "id": "QC2yqbtE1S2h",
+        "outputId": "51a2c353-021f-42ef-aec6-6fc446510815"
       },
       "execution_count": 417,
       "outputs": [
@@ -3836,12 +3836,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "mFvKEQbL15oU",
-        "outputId": "a1676bf5-ad66-492d-a958-12474ffe0cc0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "id": "mFvKEQbL15oU",
+        "outputId": "a1676bf5-ad66-492d-a958-12474ffe0cc0"
       },
       "execution_count": 418,
       "outputs": [
@@ -3875,11 +3875,11 @@
         "print(\"Accuracy Score of Random forest: \",accuracy_score(Y,y_pred_Random_forest))"
       ],
       "metadata": {
-        "id": "6XYXxIsx2OmL",
-        "outputId": "af0925d0-3720-4aa5-e059-c7239e91dea3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6XYXxIsx2OmL",
+        "outputId": "af0925d0-3720-4aa5-e059-c7239e91dea3"
       },
       "execution_count": 419,
       "outputs": [
@@ -3918,11 +3918,11 @@
         "print(\"3-fold cross-validation of random forest:\",cross_validation_Random_forest.mean())"
       ],
       "metadata": {
-        "id": "8REkUVEO2mj5",
-        "outputId": "c91484c6-87df-45d6-ebdd-87594188e41a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8REkUVEO2mj5",
+        "outputId": "c91484c6-87df-45d6-ebdd-87594188e41a"
       },
       "execution_count": 427,
       "outputs": [
@@ -3979,12 +3979,12 @@
         "plt.xlabel('feature_importances')"
       ],
       "metadata": {
-        "id": "aEk97Xir3M0P",
-        "outputId": "2ae9f333-ba25-4f8f-ed41-248d87063eb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 586
-        }
+        },
+        "id": "aEk97Xir3M0P",
+        "outputId": "2ae9f333-ba25-4f8f-ed41-248d87063eb1"
       },
       "execution_count": 421,
       "outputs": [
